# Vizior

./: .gitmodules  CMakeLists.txt  README.md
CMake/: Config.cmake.in
include/: Camera.hpp  Common.hpp  FontManager.hpp  ImageBuilder.hpp  Point2D.hpp  Shaders.hpp  Texture.hpp  Vizior.hpp  Window.hpp  vizior.hpp
include/glad/: glad.h
src/: Camera.cpp  FontManager.cpp  ImageBuilder.cpp  Point2D.cpp  Shaders.cpp  Texture.cpp  Vizior.cpp  Window.cpp  glad.c  main.cpp  vizior.cpp
